<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="tab_title_movie">Movie</string>
    <string name="tab_title_tvshow">TV Show</string>
    <string name="title_movie_tab">List Movie</string>
    <string name="title_tvshow_tab">List TV Show</string>

    <string name="title_toolbar_detail">Detail</string>
    <string name="colon">:</string>
    <string name="label_runtime">Runtime</string>
    <string name="label_director">Director</string>
    <string name="label_creator">Creator</string>
    <string name="label_genre">Genre</string>
    <string name="title_synopsis">Overview</string>
    <string name="btn_save_text">Save</string>
    <string name="change_language_title">Change Language</string>
    <string name="empty_data">-</string>

    <!-- Dummy Data-->
    <string name="dummyGenre">Drama, Thriller, Action, Science Fiction, Horror</string>
    <string name="dummyTitle">Movie or TV Show Title</string>
    <string name="dummyDesc">Movie or TV Show Description</string>
    <string name="dummyRuntime">1h 20m</string>
    <string name="dummyDirector">Jack Steven sadasd dasd sad adasd</string>

    <!-- Empty State -->
    <string name="empty_state_desc_no_conn">Please check your internet connection</string>
    <string name="empty_state_btn_reconnect">Reconnect</string>
    <string name="empty_state_title_no_conn">No internet connection</string>
    <string name="empty_state_desc_error_page">Page not found</string>
    <string name="empty_state_title_error_page">Oops, something went wrong</string>

    <!-- Time -->
    <string name="minutes">m</string>
    <string name="hours">h</string>

    <!-- Error Response API -->
    <string name="api_error_connection">Cannot connect to the server</string>
    <string name="api_error_response">Failed to get results</string>

</resources>
