<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_no_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_state_no_connection"
        android:contentDescription="@string/empty_state_title_no_conn"/>

    <TextView
        android:id="@+id/title_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/empty_state_title_no_conn"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_state_desc_no_conn"
        android:textAlignment="center"
        android:textColor="#494848"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_reconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_state_btn_reconnect"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="#fff"/>

</LinearLayout>